# graphfakos

./: .gitattributes  .gitignore  .pre-commit-config.yaml  API_COMPATIBILITY.md  CODE_OF_CONDUCT.md  CODE_QUALITY.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: quality.yml  release.yml
docs/: README.md  accessibility.md  artifact-interchange.md  cleanup-workflow.md  code-quality-enforcement.md  custom-provider-example.md  engineering-patterns.md  live-sessions.md  provider-envelope.md  source-tree-owner-map.md  ui-contracts.md
docs/specs/: competitive-viewer-next-parity-2026-07-02-spec.md  competitive-viewer-roadmap-2026-07-01-spec.md  dense-graph-usability-next-pass.md
docs/trackers/: competitive-viewer-next-parity-2026-07-02-tracker.md  competitive-viewer-roadmap-2026-07-01-tracker.md  dense-graph-usability-next-pass-tracker.md
examples/: provider_host.py
scripts/: generate_benchmark_envelopes.py  release_check.py  validate_commit_message.py
scripts/baselines/: broad_exception_baseline.tsv  filename_underscore_hygiene.tsv  helper_duplicates_baseline.tsv  max_file_loc_baseline.tsv  method_loc_baseline.tsv
scripts/validate/: broad_exception.py  filename_underscore_hygiene.py  helper_duplicates.py  max_file_loc.py  method_loc.py  path_structure_hygiene.py  public_surface.py  type_ignore_hygiene.py
tests/: test_artifacts.py  test_browser_runtime.py  test_cli.py  test_demo_adapter.py  test_desktop_backend.py  test_fixture_adapter.py  test_imports.py  test_live_graph.py  test_live_server.py  test_local_preview_server.py  test_provider_contract.py  test_provider_envelope.py  test_quality_scripts.py  test_release_check.py  test_render_static_html.py  test_third_party_host_example.py
web/: package-lock.json  package.json  playwright.config.js
(+63 files in other folders)
